# beltic-cli

./: .beltic.yaml  .beltic.yaml.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  context.md  install.sh  sdk.md
.github/workflows/: ci.yml  release.yml  sync-schemas.yml
docs/: SANDBOX.md
src/: config.rs  credential.rs  lib.rs  main.rs  schema.rs
src/commands/: api_key.rs  auth.rs  credential_id.rs  dev_init.rs  directory.rs  discovery.rs  fingerprint.rs  http_sign.rs  init.rs  keygen.rs  login.rs  mod.rs  prompts.rs  register.rs  sandbox.rs  schema.rs  sign.rs  verify.rs  whoami.rs
src/crypto/: mod.rs  signer.rs  verifier.rs
src/manifest/: config.rs  credential.rs  detector.rs  fingerprint.rs  mod.rs  prompts.rs  schema.rs  templates.rs  validator.rs
src/sandbox/: mod.rs  monitor.rs  policy.rs  report.rs
test-agent/: .env.example  .gitignore  README.md  TESTING_GUIDE.md  package.json
test-agent/src/: config.ts  index.ts
test-agent/src/tools/: database.ts  email.ts  search.ts  ticket.ts
tests/: jws_vectors.rs
