[package]
name = "beltic"
version = "0.2.0"
edition = "2021"
authors = ["belticlabs"]
license = "MIT"
description = "CLI for managing and signing verifiable credentials for AI agents"
repository = "https://github.com/belticlabs/beltic-cli"
homepage = "https://github.com/belticlabs/beltic-cli"
readme = "README.md"
keywords = ["beltic", "credentials", "ai-agents", "jwt", "jws"]
categories = ["command-line-utilities", "cryptography", "authentication"]

[dependencies]
anyhow = "1.0.82"
base64 = "0.22"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
console = "0.15.8"
dialoguer = "0.11.0"
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "pem", "rand_core"] }
getrandom = "0.2"
glob = "0.3.1"
globset = "0.4.14"
ignore = "0.4.23"
indicatif = "0.17.8"
jsonwebtoken = { version = "9.3.0", default-features = false, features = ["use_pem"] }
p256 = { version = "0.13.2", features = ["pkcs8", "pem"] }
pkcs8 = { version = "0.10.2", features = ["pem"] }
rand_core = "0.6.4"
regex = "1.11.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
thiserror = "1.0.64"
toml = "0.8.19"
url = "2.5"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
zeroize = "1.7.0"
jsonschema = { version = "0.17.1", features = ["draft202012"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
directories = "5.0"

[dev-dependencies]
tempfile = "3.13.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
